# blb

./: .gitignore  .gitmodules  0001-.patch  MIGRATION_PLAN.md  README.md  SEAL_TO_OPENFHE_ANALYSIS.md  clean.sh  start.sh  throttle.sh
SCI/: .gitignore  CMakeLists.txt
SCI/install/include/BuildingBlocks/: aux-protocols.h  truncation.h
SCI/install/include/FloatingPoint/: fixed-point.h  floating-point.h
SCI/install/include/OT/: emp-ot.h  ot_pack.h
SCI/install/include/utils/: block.h  io_channel.h  mitccrh.h  utils.h  utils.hpp
SCI/install/lib/cmake/SCI/: SCIConfig.cmake  SCITargets-noconfig.cmake
SCI/networks/: Makefile  cmake_install.cmake
SCI/output/blb/: client_base_iknp_lan.txt  client_base_iknp_wan1.txt  client_base_iknp_wan2.txt  client_base_iknp_wan3.txt  client_base_vole_lan.txt  client_base_vole_wan1.txt  client_base_vole_wan2.txt  client_base_vole_wan3.txt  client_gpt2_iknp_lan.txt  client_gpt2_iknp_wan3.txt  client_gpt2_vole_lan.txt  client_gpt2_vole_wan2.txt  client_gpt2_vole_wan3.txt  client_large_iknp_lan.txt  client_large_iknp_wan3.txt  client_large_vole_lan.txt  client_large_vole_wan2.txt  client_large_vole_wan3.txt  server_base_iknp_lan.txt  server_base_iknp_wan1.txt  server_base_iknp_wan2.txt  server_base_iknp_wan3.txt  server_base_vole_lan.txt  server_base_vole_wan1.txt  server_base_vole_wan2.txt  server_base_vole_wan3.txt  server_gpt2_iknp_lan.txt  server_gpt2_iknp_wan3.txt  server_gpt2_vole_lan.txt  server_gpt2_vole_wan2.txt  server_gpt2_vole_wan3.txt  server_large_iknp_lan.txt  server_large_iknp_wan3.txt  server_large_vole_lan.txt  server_large_vole_wan2.txt  server_large_vole_wan3.txt
SCI/output/bolt/: client_base_lan.txt  client_base_wan1.txt  client_base_wan2.txt  client_gpt2_lan.txt  client_gpt2_wan2.txt  client_gpt2_wan3.txt  client_large_lan.txt  client_large_wan2.txt  client_large_wan3.txt  server_base_lan.txt  server_base_wan1.txt  server_base_wan2.txt  server_gpt2_lan.txt  server_gpt2_wan2.txt  server_gpt2_wan3.txt  server_large_lan.txt  server_large_wan2.txt  server_large_wan3.txt
SCI/scripts/: build.sh  build_ot_deps.sh
SCI/src/: CMakeLists.txt  library_fixed_uniform.cpp
SCI/src/BuildingBlocks/: CMakeLists.txt  aux-protocols.cpp  cmake_install.cmake  truncation.cpp  value-extension.cpp  value-extension.h
SCI/src/FloatingPoint/: Makefile  bool-data.cpp  cmake_install.cmake  fixed-point.cpp  floating-point.cpp  fp-math.cpp  fp-math.h
SCI/src/GC/: Makefile  aes_opt.h  cmake_install.cmake  mitccrh.h
SCI/src/LinearHE/: CMakeLists.txt  Makefile  cmake_install.cmake  conv-field.h  utils-HE.cpp  utils-HE.h
SCI/src/LinearOT/: Makefile  cmake_install.cmake  linear-ot.cpp
SCI/src/Math/: cmake_install.cmake  math-functions.cpp
SCI/src/Millionaire/: millionaire.h
SCI/src/OT/: CMakeLists.txt  iknp_ot_pack.h  ot_pack.h  split-iknp.h  split-kkot.h  vole_ot_pack.h
SCI/src/OT/ferret/: silent_ot.h
SCI/src/utils/: constants.h  mitccrh.h  utils.hpp
SCI/src/utils/cmake/: FindGMP.cmake
SCI/tests/: CMakeLists.txt  server.txt
SCI/tests/activation/: CMakeLists.txt  Makefile  bolt_gelu.cpp  bolt_layer_norm.cpp  bolt_softmax.cpp  cmake_install.cmake  iron_gelu.cpp
SCI/tests/bert_bolt/: CMakeLists.txt  bert.cpp  bert.h  bert_utils.h  bolt_bert.cpp  ckks_bert.cpp  ckks_bert.h  ckks_bert_basic.cpp  ckks_bert_main.cpp  he.cpp  he.h  linear.cpp  linear.h  linear_ckks.cpp  linear_ckks.h  nonlinear.cpp  nonlinear.h  test_nonlinear.cpp
SCI/tests/bert_bolt/output/: my_y_intt.txt  y.txt
SCI/tests/bert_large_bolt/: CMakeLists.txt  Makefile  bert.cpp  bert.h  bolt_bert_large.cpp  ckks_bert.cpp  ckks_bert.h  ckks_bert_basic.cpp  ckks_bert_large_main.cpp  cmake_install.cmake  complex.h  he.cpp  he.h  linear.cpp  linear.h  linear_ckks.cpp  linear_ckks.h  nonlinear.cpp  nonlinear.h
SCI/tests/bert_large_bolt/output/: destination.txt  destination_seal.txt  my_y.txt  my_y2.txt  r.txt  y_matrix.txt
SCI/tests/non-linear/: test_millionaire.cpp
docker/: Dockerfile  Dockerfile.dev  Dockerfile.seal  Dockerfile.seal.dev  README.md  docker-run.sh
