# add_subdirectory(activation)
add_subdirectory(bert_large_bolt)
# add_subdirectory(bert_bolt)

# find_package(Threads REQUIRED)
# find_package(OpenMP REQUIRED)
# macro (add_test_operation _name)
# 	add_executable(${_name} "non-linear/test_${_name}.cpp")
# 	include_directories(../src)
#     target_link_libraries(${_name} SCI-Millionaire Threads::Threads OpenMP::OpenMP_CXX) 
# endmacro()


# add_test_operation(millionaire)